--- a/.github/workflows/release-tagging.yml
+++ b/.github/workflows/release-tagging.yml
@@ -19,6 +19,7 @@ jobs:
               uses: mathieudutour/github-tag-action@v6.2
               with:
                 github_token: ${{ secrets.GITHUB_TOKEN }}
+                tag_prefix: ''
 
     create-release:
         name: 'Create Release'
